--- a/spec/仕様書.md
+++ b/spec/仕様書.md
@@ -6,7 +6,9 @@
 
 ## 主な機能
 - プレイヤーを透明化し、代わりにBlockDisplayで人型を表現します。
-- プレイヤーの移動や視点操作をBlockDisplayに同期させます。
+- プレイヤーの移動をBlockDisplayに同期させます。視点操作は、プレイヤーの視点が1度以上ずれた場合にBlockDisplayが90度ずつアニメーションしながら回転し、その後プレイヤーの視点を元の方向に戻します。
+- Yaw回転とPitch回転は独立して処理され、複合回転時も正しく動作します。
+- BlockDisplayの回転の中心をブロックの中心に合わせるため、JOMLのMatrixを用いて変換行列を事前に計算します。
 - 壁との衝突判定を行い、衝突したら死亡させます。
 - ゲームの開始と終了を管理するコマンドを提供します。
 
@@ -14,7 +16,7 @@
 - `/rth start`: ゲームを開始します。
 - `/rth stop`: ゲームを強制終了します。
 - ゲーム中はWASD、ジャンプ、スニークで移動します。
-- マウス操作で視点（BlockDisplay）を回転させます。
+- プレイヤーの視点が10度以上ずれた場合、BlockDisplayが90度ずつアニメーションしながら回転し、その後プレイヤーの視点を元の方向に戻します。
 
 ## 設定例 (config.yml)
 ```yaml
@@ -28,13 +30,29 @@ game.speed: 1.0
 
 ## MVP（最初に作る最小機能）
 - プレイヤーを透明化し、頭上に単一のBlockDisplayを表示します。
-- プレイヤーの視点移動（Yaw/Pitch）にBlockDisplayが追従して回転するようにします。
+- プレイヤーの視点が1度以上ずれた場合、BlockDisplayが90度ずつアニメーションしながら回転し、その後プレイヤーの視点を元のX+方向に戻します。
+- Yaw回転とPitch回転は独立して処理され、複合回転時も正しく動作します。
+- BlockDisplayの回転の中心をブロックの中心に合わせるため、JOMLのMatrixを用いて変換行列を事前に計算します。
 - `/rth start` コマンドで上記の機能が有効になり、`/rth stop` コマンドで元に戻るようにします。
+
+## 技術的詳細
+### 回転処理の仕組み
+- プレイヤーの視点が1度以上ずれた場合、BlockDisplayが90度ずつアニメーションしながら回転します。
+- Yaw回転とPitch回転は独立して処理され、複合回転時も正しく動作します。
+- 回転の順序は重要で、Yaw回転後にPitch回転を行う場合、Pitch回転はYaw回転の影響を受けないように処理されます。
+- **重要**: BlockDisplayの位置は、固定された進行方向（X+方向）を基準に計算する必要があります。
+- 回転の中心をブロックの中心に合わせるため、JOMLのMatrixを用いて変換行列を事前に計算します。
+
+### BlockDisplayの位置調整
+- BlockDisplayはプレイヤーの頭上に固定配置されるのではなく、プレイヤーの進行方向（回転方向）に応じて位置を調整する必要があります。
+- プレイヤーがYaw回転した場合、BlockDisplayはプレイヤーの前方（進行方向）に配置されるべきです。
+- プレイヤーがPitch回転した場合、BlockDisplayはプレイヤーの上下方向に配置されるべきです。
+- **進行方向は現時点でX+方向に固定**されており、回転軸はこの固定された進行方向を基準に計算します。
+- 将来的に進行方向を変更するアクションを追加する予定です。
 
 ## TODO
 - BlockDisplayで人型のモデルを生成する。
 - WASD、ジャンプ、スニークでの移動を実装する。
-- マウスホイールでのRoll回転を実装する。
 - 壁との衝突判定を実装する。
 - 壁に衝突した際に死亡（ゲームオーバー）処理を実装する。
 - ゲームコースを生成する機能。
